frontend/src/app/snap-shot-page/snap-shot-page.component.css
*{
  padding: 0;
  margin: 0;
}
body{
  margin: 0;
  padding: 0;
  background-image: linear-gradient( 174.2deg,  rgba(245,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
  min-height: 100vh;
  overflow: hidden;
}
.center{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  height: 90%;
  background: #efefef;
  border-radius: 15px;
  border: 1px lightgrey solid;
}
.top{
  padding: 1%;
  background: #50c878;
  height: 20%;
  max-height: 70px;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
}
.bottom{
  margin: 20px;
  bottom: 0%;
  height: 67%;
  width: auto;

}
.center h1{
  text-align: center;
  padding: 0 0 1% 0;
  color: #fff;

}
.center h2{

  text-align: center;

}
#takesnipText{
  padding-top: 55px;
  text-align: center;
}
.orText{
  text-align: center;

  font-size: 26px;
  position: absolute;
  top: 49%;
  left: 91%;
  transform: translate(-50%, -50%);
}
.orbottom{
  text-align: center;
  color: #dadada;
  font-size: 26px;
  position: absolute;
  top: 49%;
  left: 83%;
  transform: translate(-50%, -50%);
}
.orText:hover{
  cursor: pointer;
  color: #fafafa;
  text-decoration: underline;
}
.or{
  text-align: center;
  padding-top: 4%;
  font-size: 26px;
}
.imageholder{
  width: 70%;
  height: 85%;
  background: lightgrey;
  margin-right: auto;
  margin-left: auto;
  border-radius: 25px;
}
.toolset{
  display: flex;
  background: #50c878;
  width: 70%;
  height: 10%;
  margin-right: auto;
  margin-left: auto;
  margin-top: 1%;
  border-radius: 25px;
}
#cropbtn{
  width: 45px;
  height: 90%;
  margin-left: 10px;
  margin-top: auto;
  margin-bottom: auto;
  border-radius: 50px;
  background: #f1f1f1;
  border: 2px #2e8b57 solid;
  font-size: 23px;
  transition: 0.4s;
}
#cropbtn:hover{
  cursor: pointer;
  background: #2e8b57;
  color: #fff;
}
#sendbtn{

  width: 45px;
  height: 90%;
  margin-left: 10px;
  margin-top: auto;
  margin-bottom: auto;

  border-radius: 50px;
  background: #f1f1f1;
  border: 2px #2e8b57 solid;
  font-size: 23px;
  transition: 0.4s;
}
#sendbtn:hover{
  cursor: pointer;
  background: #2e8b57;
  color: #fff;
}
.imageholder img{
  width: 100%;
  height: 100%;
  object-fit: scale-down;
}
input[type="file"]{
  display: none;
}
.img-preview{
  background: red;
  width: 200px;
  height: 200px;
  position: absolute;
  top: 27%;
  left: 91%;
  transform: translate(-50%, -50%);
}
#subtext{
  text-align: center;
  color: #fff;
  font-size: 18px;
}
.truebottom button{
  width: 200px;
  height: 50px;
  border: 2px #33b864 solid;
  background: #50c878;
  border-radius: 25px;
  font-size: 32px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #fff;
}
.truebottom button:hover{
  background: #33b864;
  cursor: pointer;
}
.truebottom{
  display: flex;
  background: #2e8b57;
  width: 100%;
  height: 65px;
  position: absolute;
  bottom: 0;
  color: #fff;
  border-bottom-left-radius: 15px;
  border-bottom-right-radius: 15px;
}
.logo{
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 150px;
  height: 150px;
  filter: drop-shadow(0 0 2rem #2e4b36);
}
.center form{
  padding: 0 40px;
  box-sizing: border-box;
}
form .txt_field{
  position: relative;
  border-bottom: 2px solid #adadad;
  margin: 30px 0;
  font-size: 22px;

}
.txt_field input{
  width: 100%;
  padding: 0 5px;
  height: 40px;
  font-size: 22px;
  border: none;
  background: none;
  outline: none;

}
.txt_field label{
  position: absolute;
  top: 50%;
  left: 5px;
  color: #adadad;
  transform: translateY(-50%);
  font-size: 22px;
  pointer-events: none;
  transition: .5s;
}
.txt_field span::before{
  content: '';
  position: absolute;
  top: 40px;
  left: 0;
  width: 100%;
  height: 2px;
  background: navy;
  transition: .5s;
}
.txt_field input:focus ~ label, .txt_field input:valid ~ label{
  top: -5px;
  color: #4f473b;
}
.txt_field input:focus ~ span::before, .txt_field input:valid ~ span::before{
  width: 100%;
}
.pass{
  margin: -5px 0 20px 5px;
  color: #a6a6a6;
  cursor: pointer;
}
.pass:hover{
  text-decoration: underline;
}
input[type="submit"]{
  width: 100%;
  height: 75px;
  margin: 3% auto;
  border: 1px solid;
  background: #4f473b;
  border-radius: 25px;
  font-size: 48px;
  color: silver;
  font-weight: 700;
  cursor: pointer;
  outline: none;
}
input[type="submit"]:hover{
  border-color: #2e4b36;
  transition: .3s;

}
.pass {
  position: relative;
  display: inline-block;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* The actual popup */
.pass .popuptext {
  visibility: hidden;
  width: 160px;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 8px 0;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -80px;
}

/* Popup arrow */
.pass .popuptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}

/* Toggle this class - hide and show the popup */
.pass .show {
  visibility: visible;
  -webkit-animation: fadeIn 1s;
  animation: fadeIn 1s;
}

/* Add animation (fade in the popup) */
@-webkit-keyframes fadeIn {
  from {opacity: 0;}
  to {opacity: 1;}
}

@keyframes fadeIn {
  from {opacity: 0;}
  to {opacity:1 ;}
}

